--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -87,6 +87,11 @@ hr.star-primary:after {
     background-color: #39d96e;
 }
 
+.img-logo {
+    max-width: 20%;
+    margin-top: -10px;
+}
+
 header {
     text-align: center;
     color: #fff;
@@ -105,7 +110,6 @@ header img {
 
 header .intro-text .name {
     display: block;
-    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 2em;
     font-weight: 700;
@@ -142,7 +146,9 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top .navbar-brand {
+        float: none;
         font-size: 2em;
+        margin-left: -21px;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -158,7 +164,6 @@ header .intro-text .skills {
 }
 
 .navbar {
-    text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
