--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -125,11 +125,12 @@ header .intro-text .skills {
 @media(min-width:768px) {
     header .container {
         padding-top: 200px;
-        padding-bottom: 100px;
+        padding-bottom: 300px;
     }
 
     header .intro-text .name {
         font-size: 4.75em;
+        margin-top: -50px;
     }
 
     header .intro-text .skills {
